--- a/Mod/sources/tab-bar.css
+++ b/Mod/sources/tab-bar.css
@@ -2,12 +2,12 @@
   border-width: 1px 0px 0px 0px;
   border-style: solid;
   border-top-color: transparent;
-  border-bottom-color: var(--colorHighlightBg);
+  border-bottom-color: var(--colorHighlightBgDark);
 }
 
 #tabs-container .tab.active {
-  border-width: 1px 1px 0 1px;
-  border-color: var(--colorHighlightBg);
+  border-width: 1px 1px 0px 1px;
+  border-color: var(--colorHighlightBgDark);
   border-bottom-color: transparent;
 }
 
@@ -19,7 +19,7 @@
 #tabs-subcontainer .tab.active {
   border-width: 1px 1px 0px 1px;
   border-style: solid;
-  border-color: var(--colorHighlightBg);
+  border-color: var(--colorHighlightBgDark);
 }
 
 #tabs-subcontainer .tab.active .tab-header > .close {
@@ -43,7 +43,7 @@
   opacity: 1 !important;
 }
 
-#tabs-container .tab:not(.tab-group):not(.tab-in-accordion) {
+#tabs-container .tab:not(.tab-group) {
   clip-path: polygon(6.5px 0%, 100% 0, 100% 100%, 0 100%, 0% 6.5px);
 }
 
@@ -53,14 +53,14 @@
   background-image: none !important;
 }
 
-#tabs-container .tab:not(.tab-group):not(.tab-in-accordion).active {
-  background-image: linear-gradient(135deg, var(--colorHighlightBg) 4.5px, transparent 0px);
+#tabs-container .tab:not(.tab-group).active {
+  background-image: linear-gradient(135deg, var(--colorHighlightBgDark) 4.5px, transparent 0px);
 }
 
 #tabs-container[style*="flex-grow: 0;"] .tab:not(.tab-group).active {
-  background-color: var(--colorHighlightBg) !important;
-  color: var(--colorHighlightFg);
-  fill: var(--colorHighlightFg);
+  background-color: var(--colorHighlightBgDark) !important;
+  color: var(--colorHighlightFgDark);
+  fill: var(--colorHighlightFgDark);
 }
 
 #tabs-container:not([style*="flex-grow: 0;"]) .tab-position[style*="--ZIndex:2;"]:after,
@@ -69,11 +69,11 @@
 #tabs-subcontainer .tab-position[style*="--ZIndex:3;"]:after {
   --modLineWidth: 25vw;
   content: " ";
-  background-image: linear-gradient(to right, var(--colorHighlightBg), transparent);
+  background-image: linear-gradient(to right, var(--colorHighlightBgDark), transparent);
   width: var(--modLineWidth);
   height: 1px;
   position: absolute;
-  right: calc(calc(var(--modLineWidth) - 1px) * -1);
+  right: calc(calc(var(--modLineWidth) - 2px) * -1);
   bottom: 0px;
 }
 
@@ -104,8 +104,8 @@
 #tabs-subcontainer .tab-position[style*="--ZIndex:2;"]:before,
 #tabs-subcontainer .tab-position[style*="--ZIndex:3;"]:before {
   content: " ";
-  background-color: var(--colorHighlightBg);
-  width: 100vw;
+  background-color: var(--colorHighlightBgDark);
+  width: 100.03vw;
   height: 1px;
   position: absolute;
   left: -100vw;
@@ -160,7 +160,7 @@
 }
 
 .tab-position .tab.unread .close:not(:hover) {
-  background-color: var(--colorHighlightBg) !important;
+  background-color: var(--colorHighlightBgDark) !important;
   border-radius: 100%;
   transform: scale(0.5);
 }
@@ -192,7 +192,7 @@
 
 #tabs-container[style*="flex-grow: 0;"] .tab.active.marked {
   background-color: transparent !important;
-  border: 2px solid var(--colorHighlightBg) !important;
+  border: 2px solid var(--colorHighlightBgDark) !important;
 }
 
 .tab.marked:not(.active) .tab-indicator.marked.active.tab-indicator.marked:after {
@@ -212,7 +212,7 @@
   background-color: transparent !important;
   height: 8px !important;
   border-top: none !important;
-  border-bottom: 1px solid var(--colorHighlightBg) !important;
+  border-bottom: 1px solid var(--colorHighlightBgDark) !important;
 }
 
 .tab-group.active + .tab-group-indicator {
@@ -220,15 +220,15 @@
 }
 
 .tab-group + .tab-group-indicator .tab-indicator + .tab-indicator {
-  border-left: 1px solid var(--colorHighlightBg) !important;
+  border-left: 1px solid var(--colorHighlightBgDark) !important;
 }
 
 .tab-group:not(.active) + .tab-group-indicator .tab-indicator:first-of-type {
-  border-left: 1px solid var(--colorHighlightBg);
+  border-left: 1px solid var(--colorHighlightBgDark);
 }
 
 .tab-group:not(.active) + .tab-group-indicator .tab-indicator:last-of-type {
-  border-right: 1px solid var(--colorHighlightBg);
+  border-right: 1px solid var(--colorHighlightBgDark);
 }
 
 .tab-group:not(.active) + .tab-group-indicator .tab-indicator.active:not(.marked):hover {
@@ -240,13 +240,12 @@
 }
 
 .tab-group-indicator .tab-indicator.marked {
-  background-color: var(--colorHighlightBg) !important;
+  background-color: var(--colorHighlightBgDark) !important;
   border-left-color: transparent !important;
   border-right-color: transparent !important;
 }
 
-.tab-group,
-.tab-in-accordion {
+.tab-group {
   border-radius: 0px !important;
 }
 
@@ -258,7 +257,7 @@
 .tab-group.active + .tab-group-indicator {
   border-width: 1px 1px 0 1px;
   border-style: solid;
-  border-color: var(--colorHighlightBg);
+  border-color: var(--colorHighlightBgDark);
   padding-left: 0px !important;
   padding-right: 0px !important;
   margin-right: 1px;
@@ -272,7 +271,7 @@
   border-bottom: none !important;
 }
 
-#tabs-container .tab:not(.tab-group):not(.tab-in-accordion) {
+#tabs-container .tab:not(.tab-group) {
   border-radius: 0px !important;
   border-top-right-radius: 2px !important;
 }
@@ -301,29 +300,13 @@
   margin-top: 2px;
 }
 
-.tab-in-accordion .svg-tab-stack {
-  top: 0px;
-  left: 0px;
-  border-radius: 0px;
-}
-.tab-in-accordion .svg-tab-stack > .stack-frame {
-  stroke: var(--colorHighlightBg);
-  stroke-width: 2px;
-  rx: 0px;
-  ry: 0px;
-}
-
-.accordion-toggle-arrow .VivaldiSvgIcon.left {
-  fill: var(--colorHighlightBg);
-}
-
 .tab-position .tab .tab-header .button-badge {
   display: none !important;
 }
 
 .tab-position .tab.active .progress-indicator {
   background-color: var(--colorAccentBg);
-  height: 1px;
+  height: 4px;
 }
 
 .tab-position .tab:not(.active) .progress-indicator {
@@ -415,7 +398,7 @@ div#tabs-container {
   height: 11px !important;
   width: 11px !important;
   flex: none !important;
-  fill: var(--colorHighlightBg);
+  fill: var(--colorHighlightBgDark);
 }
 
 #tabs-container[style*="flex-grow: 0;"] .newtab button svg {
@@ -454,11 +437,11 @@ div#tabs-container {
 }
 
 .toolbar-tabbar.sync-and-trash-container button {
-  border-radius: 0px !important;
+  border-radius: 4px !important;
 }
 
 .toolbar-tabbar.sync-and-trash-container button:hover {
-  background-color: var(--WButtonHoverBg) !important;
+  background-color: var(--colorAccentBgFaded) !important;
 }
 
 .newtab > button {
@@ -474,18 +457,21 @@ div#tabs-container {
 
 .tab:not(.tab-group) .tab-audio {
   transform: scale(0.8) !important;
-  left: 13px;
-  bottom: -2px;
+  left: 1px;
+  bottom: 0px;
   border-radius: 100%;
-  background-color: var(--colorBg) !important;
+  background-color: rgba(200, 180, 180, 0.85) !important;
+  color: var(--colorBg) !important;
 }
 
 .tab.active:not(.tab-group) .tab-audio {
-  background-color: var(--colorAccentBg) !important;
+  transform: scale(0.8) !important;
+  background-color: rgba(200, 180, 180, 0.85) !important;
+  color: var(--colorBg) !important;
 }
 
 .tab:not(.tab-group).active .tab-audio {
-  left: 12px;
+  left: 0px;
 }
 
 .tab:not(.tab-group).audio-on .favicon,
@@ -525,9 +511,9 @@ div#tabs-container {
 }
 
 #tabs-subcontainer {
-  margin-left: 40px;
-  margin-top: 1px;
-  border: none !important;
+  margin-left: 40px !important;
+  margin-top: -1px !important;
+  border-left: 1px solid var(--colorHighlightBgDark) !important;
   box-shadow: none !important;
   z-index: 1;
 }
@@ -538,16 +524,16 @@ div#tabs-container {
 
 .tabs-top .tab-position .tab.insubstrip,
 .tabs-bottom .tab-position .tab.insubstrip {
-  margin: 0px 1px 0px 0px !important;
+  margin: 1px 0px 0px -1px !important;
 }
 
-#browser:not(.accordion-tabs-on) svg.svg-tab-stack {
+svg.svg-tab-stack {
   display: none !important;
 }
 
 .stack-counter {
   align-self: center;
-  background-color: var(--colorHighlightBg) !important;
+  background-color: var(--colorHighlightBgDark) !important;
   color: var(--colorHighlightFg) !important;
 }
 
@@ -557,7 +543,7 @@ div#tabs-container {
 }
 
 .subcontainer-lock button {
-  fill: var(--colorHighlightBg);
+  fill: var(--colorHighlightBgDark);
 }
 
 #browser.tabs-top:not(.address-top).tabs-at-edge #header {
