Revert hover color changes to make them controlled by a variable

--- a/Mod/sources/bookmarks-bar.css
+++ b/Mod/sources/bookmarks-bar.css
@@ -43,7 +43,7 @@
 }
 
 .bookmarkbarItem:hover {
-  background-color: var(--colorAccentBgFadedMore) !important;
+  background-color: var(--WButtonHoverBg) !important;
 }
 
 .address-top .toolbar-mainbar:after {
