--- a/Mod/sources/vars.css
+++ b/Mod/sources/vars.css
@@ -1,5 +1,9 @@
 #browser {
-  --WButtonHoverBg: var(--colorAccentBgFaded);
+  --GXbuttonFill: var(--colorHighlightBgDark);
+  --GXbuttonBgHover: var(--colorAccentBgFaded);
+  --GXborderColor: var(--GXbuttonFill);
+  /* set to "currentColor" to get original look of Opera GX */
+  --GXaddressBarButtonFill: var(--GXbuttonFill);
   --spnr1: #949499;
   --spnr2: #838489;
   --spnr3: #807f85;
