--- a/Mod/sources/global.css
+++ b/Mod/sources/global.css
@@ -7,10 +7,7 @@
 }
 
 #titlebar button.vivaldi {
-  margin-top: 3px;
-  margin-left: 3px;
-  border-left: 0px solid var(--colorBg) !important;
-  border-top: 0px solid var(--colorBg) !important;
+  width: var(--GXpanelWidth);
 }
 
 .vivaldi span.burger-icon {
